estilo de tesoros

--- a/islaDelColor/inicio.html
+++ b/islaDelColor/inicio.html
@@ -73,7 +73,6 @@
     <section id="tesoros">
         <h2>Guía de tesoros</h2>
         <p> Aqui encontrarás información sobre la teoría del color y cómo combinar colores de manera efectiva para tus proyectos.</p>
-        <img src="https://i.pinimg.com/originals/6f/17/81/6f1781ab35ac1575104b9cb459b38aea.png" alt="Teoria del color">
     
     <div class="cards"> 
         <!-- Complementario --> <div class="card" onclick="openModal('modalComplementario')"> <h3>Complementario</h3> </div>
@@ -84,10 +83,10 @@
     </section>
 
     <!-- Modales -->
-    <div id="modalComplementario" class="modal"> <div class="modal-content"> <span class="close" onclick="closeModal('modalComplementario')">&times;</span> <h2>Complementario</h2> <p>Los colores complementarios son aquellos que se encuentran en posiciones opuestas dentro de la rueda de colores.</p> </div> </div> 
-    <div id="modalAnalogo" class="modal"> <div class="modal-content"> <span class="close" onclick="closeModal('modalAnalogo')">&times;</span> <h2>Análogo</h2> <p>Los colores análogos son aquellos que se encuentran próximos entre sí en la rueda de colores.</p> </div> </div>
-    <div id="modalTriadico" class="modal"> <div class="modal-content"> <span class="close" onclick="closeModal('modalTriadico')">&times;</span> <h2>Triádico</h2> <p>Los colores triádicos son un esquema cromático que utiliza tres colores que están equidistantes entre sí en la rueda cromática. Esto significa que, al unir estos colores, se forma un triángulo equilátero.</p> </div> </div>
-    <div id="modalTetradico" class="modal"> <div class="modal-content"> <span class="close" onclick="closeModal('modalTetradico')">&times;</span> <h2>Tetrádico</h2> <p>Los colores tetrádicos se refieren a un esquema de color que utiliza cuatro colores organizados en dos pares de colores complementarios.</p> </div> </div>
+    <div id="modalComplementario" class="modal"> <div class="modal-content"> <span class="close" onclick="closeModal('modalComplementario')">&times;</span> <h2>Complementario</h2> <p>Los colores complementarios son aquellos que se encuentran en posiciones opuestas dentro de la rueda de colores. <img src="https://www.benjaminmoore.com/-/media/sites/benjaminmoore/images/color/complementary-colors/color-wheel-complementary-640.jpg" alt="complementarios"></p> </div> </div> 
+    <div id="modalAnalogo" class="modal"> <div class="modal-content"> <span class="close" onclick="closeModal('modalAnalogo')">&times;</span> <h2>Análogo</h2> <p>Los colores análogos son aquellos que se encuentran próximos entre sí en la rueda de colores. <img src="https://fthmb.tqn.com/u0sf8oG3c-6QKPC_GZYixpfphtM=/768x0/filters:no_upscale():max_bytes(150000):strip_icc()/combinar-colores-analogos-597bae1a3df78cbb7a25b740.jpg" alt="análogos"></p> </div> </div>
+    <div id="modalTriadico" class="modal"> <div class="modal-content"> <span class="close" onclick="closeModal('modalTriadico')">&times;</span> <h2>Triádico</h2> <p>Los colores triádicos son un esquema cromático que utiliza tres colores que están equidistantes entre sí en la rueda cromática. Esto significa que, al unir estos colores, se forma un triángulo equilátero. <img src="https://tse1.explicit.bing.net/th/id/OIP.B2xU_EXSA_K8vkIFq_NwTgHaHa?cb=ucfimg2&ucfimg=1&w=625&h=626&rs=1&pid=ImgDetMain&o=7&rm=3" alt="triádico"></p> </div> </div>
+    <div id="modalTetradico" class="modal"> <div class="modal-content"> <span class="close" onclick="closeModal('modalTetradico')">&times;</span> <h2>Tetrádico</h2> <p>Los colores tetrádicos se refieren a un esquema de color que utiliza cuatro colores organizados en dos pares de colores complementarios. <img src="https://tse3.mm.bing.net/th/id/OIP.Qt8q47S7-4aHTXq5Vadi1gHaGM?cb=ucfimg2&ucfimg=1&w=1600&h=1338&rs=1&pid=ImgDetMain&o=7&rm=3" alt="tetrádicos"></p> </div> </div>
 
 
     <!-- Footer -->
