--- a/islaDelColor/temaColores/indexTemas.html
+++ b/islaDelColor/temaColores/indexTemas.html
@@ -21,7 +21,7 @@
 
     <!-- Contenido principal -->
 <header>
-    <h1>🎨 Generador de Paletas</h1>
+    <h1>Generador de Paletas</h1>
     <p>Ingresa un tema y crea tus paletas personalizadas</p>
 </header>
 
