--- a/islaDelColor/inicio.html
+++ b/islaDelColor/inicio.html
@@ -26,7 +26,7 @@
 
     <!-- Hero principal -->
     <section id="hero" class="hero" >
-        <h1>🏴‍☠️ ¡Bienvenido a la Isla del Color! 🏝️ </h1>
+        <h1>¡Bienvenido a la Isla del Color!</h1>
         <p>
         Embárcate en sus profundas y místicas aguas  
         y consigue lo que nadie ha logrado:  
@@ -51,7 +51,7 @@
     </section>
 
     <!-- Explorar -->
-    <section id="explorar" class="menu-mapa"> <h2 class="titulo-mapa"> <span>Mapa de la isla</span> 
+    <section id="explorar" class="menu-mapa"> <h2 class="titulo-mapa"> <span>Explorar</span> 
         <button id="btnGuia"><svg xmlns="http://www.w3.org/2000/svg" width="44" height="44" viewBox="0 0 24 24" fill="none" stroke="#d4af37" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-help-square-rounded"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 3c7.2 0 9 1.8 9 9s-1.8 9 -9 9s-9 -1.8 -9 -9s1.8 -9 9 -9z" /><path d="M12 16v.01" /><path d="M12 13a2 2 0 0 0 .914 -3.782a1.98 1.98 0 0 0 -2.414 .483" /></svg></button> </h2> 
         <ul> 
             <li><a href="temaColores/indexTemas.html">Colores por tema</a>
