arreglado el boton y la info que se muestra

--- a/islaDelColor/inicio.html
+++ b/islaDelColor/inicio.html
@@ -90,19 +90,26 @@
     <button id="btnInfoIsla" class="btn-info"> ¿Cómo funciona la teoría del color en la isla? </button> 
     <div id="infoIsla" style="display:none;">
         <h3>Paletas de la isla</h3>
-        <p>El orden de uso es: 1 Complementario → 2 Triádicos → 1 Análogo → 1 Tetrádico</p>
+        <p>La isla usa en el siguiente orden la teoría del color para generar paletas 
+        basadas en un color principal elegido por el usuario: 
+        </p>
         
         <div class="paletas">
-            <!-- Complementario -->
-        <div class="color-box complementario">Complementario</div>
-        <!-- Triádicos -->
-        <div class="color-box triadico1">Triádico 1</div>
-        <div class="color-box triadico2">Triádico 2</div>
-        <!-- Análogo -->
-        <div class="color-box analogo">Análogo</div>
-        <!-- Tetrádico -->
-        <div class="color-box tetradico">Tetrádico</div>
-    </div>
+            <!-- Complementario ocupa todo el ancho -->
+            <div class="color-box complementario">Complementario</div>
+
+            <!-- Triádicos -->
+            <div class="color-box triadico1">Triádico 1</div>
+            <div class="color-box triadico2">Triádico 2</div>
+
+            <!-- Análogo -->
+            <div class="color-box analogo">Análogo</div>
+
+            <!-- Tetrádico -->
+            <div class="color-box tetradico">Tetrádico</div>
+
+        </div>
+
 </div>
 </section>
     
