mejora en la vista del modal

--- a/islaDelColor/inicio.html
+++ b/islaDelColor/inicio.html
@@ -63,9 +63,18 @@
     <div id="modalGuia" class="modal"> 
         <div class="modal-contenido"> 
             <span id="cerrarModal" class="cerrar">&times;</span> 
-            <p> En <b>colores por tema</b>, navegarás a través de las combinaciones sorprendentes según el tema que quieras desde algo elegante hasta lo más extravagante. <br> <b>Ingresar un color</b> te permitirá descubrir paletas armoniosas basadas en tu elección. Y si te sientes aventurero, <br><b>el generador de paletas al azar</b> te llevará a explorar combinaciones inesperadas y únicas. </p> 
+            <p>
+                En <b>colores por tema</b>, navegarás a través de las combinaciones sorprendentes según el tema que quieras, desde algo elegante hasta lo más extravagante.
+            </p>
+            <p>
+                <b>Ingresar un color</b> te permitirá descubrir paletas armoniosas basadas en tu elección.
+            </p>
+            <p>
+                Y si te sientes aventurero, <b>el generador de paletas al azar</b> te llevará a explorar combinaciones inesperadas y únicas.
+            </p>
         </div> 
     </div>
+
     
     <!-- Sección de tesoros -->
     <section id="tesoros">
