joyas en el footer

--- a/islaDelColor/inicio.html
+++ b/islaDelColor/inicio.html
@@ -121,12 +121,24 @@
 
 </div>
 </section>
-    
 
-    <!-- Footer -->
-    <footer id="info">
-        <p>© 2025 Isla del Color</p>
+
+    <!-- FOOTER -->
+    <footer class="footer">
+        <div class="footer-content">
+        <h2>🏝️ Isla del Color</h2>
+        <p>Encuentra colores bonitos e inspiración para tus ideas.</p>
+        <a href="https://github.com/TU-USUARIO" target="_blank" class="github-link">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" 
+                alt="GitHub" class="github-icon">
+        </a>
+        </div>
     </footer>
+
+    <!-- CONTENEDOR DE JOYAS -->
+    <div class="treasure-container"></div>
+
+    <div class="treasure-layer"> <canvas id="treasureCanvas"></canvas> </div>
 
     <!-- Script -->
     <script src="inicio.js"></script>
