--- a/islaDelColor/inicio.html
+++ b/islaDelColor/inicio.html
@@ -16,11 +16,11 @@
     <!-- Menú superior -->
     <header class="menu">
         <ul>
-        <li><a href="#hero">Inicio</a></li>
-        <li><a href="#historia">Leyenda</a></li>
-        <li><a href="#explorar">Explorar</a></li>
-        <li><a href="#tesoros">Tesoros</a></li>
-        <li><a href="#info">Acerca de</a></li>
+            <li><a href="#hero">Inicio</a></li>
+            <li><a href="#historia">Leyenda</a></li>
+            <li><a href="#explorar">Explorar</a></li>
+            <li><a href="#tesoros">Tesoros</a></li>
+            <li><a href="#info">Acerca de</a></li>
         </ul>
     </header>
 
@@ -56,7 +56,8 @@
         <ul> 
             <li><a href="temaColores/indexTemas.html">Colores por tema</a>
             </li> <li><a href="ingresarColor/indexIngresarColor.html">Ingresar color</a>
-            </li> <li><a href="generadoDePaletasDeColores/indexGenerador.html">Paletas al azar</a></li> </ul> 
+            </li> <li><a href="generadoDePaletasDeColores/indexGenerador.html">Paletas al azar</a></li> 
+        </ul> 
     </section>
 
     <!-- Modal oculto --> 
@@ -128,7 +129,7 @@
         <div class="footer-content">
         <h2>🏝️ Isla del Color</h2>
         <p>Encuentra colores bonitos e inspiración para tus ideas.</p>
-        <a href="https://github.com/TU-USUARIO" target="_blank" class="github-link">
+        <a href="https://github.com/yguy8" target="_blank" class="github-link">
             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" 
                 alt="GitHub" class="github-icon">
         </a>
