cofres del tesoro para el footer

--- a/islaDelColor/inicio.html
+++ b/islaDelColor/inicio.html
@@ -124,9 +124,15 @@
 </section>
 
 
-    <!-- FOOTER -->
-    <footer class="footer">
-        <div class="footer-content">
+<!-- FOOTER -->
+<footer class="footer">
+    <div class="footer-content">
+        <!-- Imagen izquierda -->
+        <img src="https://img.freepik.com/premium-photo/lost-adventures-journey-animated-treasure-chest-isometric-view_983420-197527.jpg" 
+            alt="cofre" class="footer-image">
+
+        <!-- Contenido central -->
+        <div class="footer-center">
         <h2>🏝️ Isla del Color</h2>
         <p>Encuentra colores bonitos e inspiración para tus ideas.</p>
         <a href="https://github.com/yguy8" target="_blank" class="github-link">
@@ -134,12 +140,19 @@
                 alt="GitHub" class="github-icon">
         </a>
         </div>
-    </footer>
 
-    <!-- CONTENEDOR DE JOYAS -->
-    <div class="treasure-container"></div>
+        <!-- Imagen derecha -->
+        <img src="https://img.freepik.com/premium-photo/lost-adventures-journey-animated-treasure-chest-isometric-view_983420-197527.jpg" 
+            alt="cofre" class="footer-image">
+    </div>
+</footer>
 
-    <div class="treasure-layer"> <canvas id="treasureCanvas"></canvas> </div>
+<!-- CONTENEDOR DE JOYAS -->
+<div class="treasure-container"></div>
+<div class="treasure-layer"> 
+    <canvas id="treasureCanvas"></canvas> 
+</div>
+
 
     <!-- Script -->
     <script src="inicio.js"></script>
