diseño responsivo de telefono mejorado

--- a/islaDelColor/inicio.html
+++ b/islaDelColor/inicio.html
@@ -21,7 +21,7 @@
         <!-- Lista de enlaces -->
         <ul id="menu-list">
             <li><a href="#hero">Inicio</a></li>
-            <li><a href="#historia">Leyenda</a></li>
+            <li><a href="#leyenda">Leyenda</a></li>
             <li><a href="#explorar">Explorar</a></li>
             <li><a href="#tesoros">Tesoros</a></li>
             <li><a href="#info">Acerca de</a></li>
@@ -41,7 +41,7 @@
     </header>
 
     <!-- Narrativa -->
-    <section id="historia">
+    <section id="leyenda">
         <h2>Leyenda</h2>
         <p>
         En las profundidades del océano, más allá de las rutas conocidas,  
@@ -130,7 +130,7 @@
 
 
 <!-- FOOTER -->
-<footer class="footer">
+<footer class="footer" id="info">
     <div class="footer-content">
         <!-- Imagen izquierda -->
         <img src="https://img.freepik.com/premium-photo/lost-adventures-journey-animated-treasure-chest-isometric-view_983420-197527.jpg" 
