diseño responsive añadido

--- a/islaDelColor/generadoDePaletasDeColores/indexGenerador.html
+++ b/islaDelColor/generadoDePaletasDeColores/indexGenerador.html
@@ -10,7 +10,9 @@
 <body>
     
     <nav class="menu">
-        <ul>
+        <!-- Ícono hamburguesa (solo móvil) -->
+        <div class="menu-toggle" id="menu-toggle">☰</div>
+        <ul id="menu-list">
             <li><a href="../inicio.html">Mapa</a></li>
             <li><a href="../temaColores/indexTemas.html">Colores por tema</a></li>
             <li><a href="../generadoDePaletasDeColores/indexGenerador.html">Paletas al azar</a></li>
