mejoras del tamaño de letra

--- a/islaDelColor/ingresarColor/indexIngresarColor.html
+++ b/islaDelColor/ingresarColor/indexIngresarColor.html
@@ -33,6 +33,7 @@
         <input type="text" id="color-input" value="#FFFFFF" maxlength="7" pattern="^#([A-Fa-f0-9]{6})$">
         </div>
         <button type="submit" id="color-btn">Generar paleta</button>
+        <button id="copy-palette-btn" onclick="copyPalette()">Copiar toda la paleta</button>
     </form>
 
     <!-- Contenedor de la paleta -->
